--- a/grid-101.html
+++ b/grid-101.html
@@ -12,10 +12,10 @@
 		.grid {
 			display: grid;
 			grid-template-columns: 1fr 1fr;
-			grid-template-rows: 1fr 1fr;
+			/* grid-template-rows: 1fr 1fr; */
 		}
 		.grid div {
-			--side: 100px;
+			--side: 100%;
 			width: var(--side);
 			height: var(--side);
 		}
@@ -23,14 +23,14 @@
 </head>
 <body>
 	<div class="grid">
-		<!-- <div>1</div> -->
-		<!-- <div>2</div> -->
-		<!-- <div>3</div> -->
-		<!-- <div>4</div> -->
-		<!-- <div>5</div> -->
-		<!-- <div>6</div> -->
-		<!-- <div>7</div> -->
-		<!-- <div>8</div> -->
+		<div>1</div>
+		<div>2</div>
+		<div>3</div>
+		<div>4</div>
+		<div>5</div>
+		<div>6</div>
+		<div>7</div>
+		<div>8</div>
 	</div>
 </body>
 </html>
