--- a/responsive-columns.html
+++ b/responsive-columns.html
@@ -56,7 +56,7 @@
 			<p>Many were increasingly of the opinion that they'd all made a big	mistake in coming down from the trees in the first place. And	some suggested that even the trees had been a bad move, and that no	one should ever have left the oceans.							</p>	
 		</div>
 		<div style="display: flex">
-			<img src="images/HHGTTG_Packshot_Standard.jpg" style="margin: auto" alt="">
+			<img src="images/HHGTTG_Packshot_Standard.jpg" style="margin: auto; max-width: 100%" alt="">
 		</div>
 	</div>
 </body>
