--- a/holy-grail.html
+++ b/holy-grail.html
@@ -69,8 +69,7 @@
 
 </head>
 <body>
-	<div class="holy-grail">
-		<div class="header">The Holy Grail</div>
+		<header>The Holy Grail</header>
 		<div class="nav">
 			<ul>
 				<li><a href="#">Arthur, King of Britons</a></li>
@@ -83,12 +82,10 @@
 		</div>
 		<div class="content">
 			<p>King Arthur was a legendary British leader who, according to medieval histories and romances, led the defence of Britain against Saxon invaders in the late 5th and early 6th centuries. The details of Arthur's story are mainly composed of folklore and literary invention, and modern historians generally agree that he is unhistorical.[2][3] The sparse historical background of Arthur is gleaned from various sources, including the Annales Cambriae, the Historia Brittonum, and the writings of Gildas. Arthur's name also occurs in early poetic sources such as Y Gododdin.[4]</p>
-			<p>Arthur is a central figure in the legends making up the Matter of Britain. The legendary Arthur developed as a figure of international interest largely through the popularity of Geoffrey of Monmouth's fanciful and imaginative 12th-century Historia Regum Britanniae (History of the Kings of Britain).[5] In some Welsh and Breton tales and poems that date from before this work, Arthur appears either as a great warrior defending Britain from human and supernatural enemies or as a magical figure of folklore, sometimes associated with the Welsh otherworld Annwn.[6] How much of Geoffrey's Historia (completed in 1138) was adapted from such earlier sources, rather than invented by Geoffrey himself, is unknown.</p>
 		</div>
 		<div class="images">
 			<img src="images/king-arthur.jpeg" alt="king arthur">
 			<img src="images/arthur-and-black-knight.jpg" alt="king arthur fighting the black knight">
-			<img src="images/knights.jpg" alt="the knights of the round table">
 		</div>
 		<div class="footer">
 			something about monty python or something. Something really long so it wraps and 
