--- a/responsive-columns.html
+++ b/responsive-columns.html
@@ -28,7 +28,6 @@
 		.grid {
 			display: flex;
 			flex-wrap: wrap;
-			height: 100%;
 			align-content: flex-start;
 		}
 		.grid div {
@@ -44,10 +43,16 @@
 			column-rule: 2px solid currentColor;
 			height: min-content;
 		}
+
+		.resize {
+				overflow: hidden;
+				resize: horizontal;
+			}
+
 	</style>
 </head>
 <body>
-	<div class="grid">
+	<div class="grid resize">
 		<div class="columns responsive-columns max-width">
 			<p style="margin-top: 0">Far out in the uncharted backwaters of the unfashionable end of the western spiral arm of the Galaxy lies a small unregarded yellow sun.</p>
 			<p>Orbiting this at a distance of roughly ninety-two million miles	is an utterly insignificant little blue green planet whose ape-descended life forms are so amazingly primitive that they still	think digital watches are a pretty neat idea.</p>
