--- a/responsive-columns.html
+++ b/responsive-columns.html
@@ -13,6 +13,7 @@
 			font-size: 20px;
 			padding: 2vw;
 			background: hsl(200, 50%, 30%);
+			color: white;
 		}
 
 		p:first-child {
@@ -29,12 +30,14 @@
 			display: flex;
 			flex-wrap: wrap;
 			align-content: flex-start;
+			justify-content: center;
+			align-items: center;
+			max-width: 1800px;
 		}
 		.grid div {
 			flex-basis: 400px;
 			flex-grow: 1;
 			padding: 40px;
-			color: white;
 		}
 
 		.columns {
@@ -45,9 +48,10 @@
 		}
 
 		.resize {
-				overflow: hidden;
-				resize: horizontal;
-			}
+			overflow: hidden;
+			resize: horizontal;
+			outline: 4px dashed currentColor;
+		}
 
 	</style>
 </head>
@@ -60,7 +64,7 @@
 			<p>And so the problem remained; lots of the people were mean, and	most of them were miserable, even the ones with digital watches.							</p>
 			<p>Many were increasingly of the opinion that they'd all made a big	mistake in coming down from the trees in the first place. And	some suggested that even the trees had been a bad move, and that no	one should ever have left the oceans.							</p>	
 		</div>
-		<div style="display: flex">
+		<div style="display: flex; flex-grow: 0">
 			<img src="images/HHGTTG_Packshot_Standard.jpg" style="margin: auto; max-width: 100%" alt="">
 		</div>
 	</div>
