--- a/index.html
+++ b/index.html
@@ -262,17 +262,22 @@
 						.intro .logos {
 							list-style: none;
 							display: grid;
-							grid-template-columns: 1fr 1fr;
+							grid-template-columns: 50% 1fr;
 							max-width: 60%;
 							align-items: center;
+							grid-gap: 20px 0;
+							margin: 0;
+						}
+						.intro .logos li {
+							margin: 0;
 						}
 					</style>
 					<div style="justify-self: left; font-family: Futurama;">@ErinJZimmer</div>
 					<a href="https://layouts.ez.codes">https://layouts.ez.codes</a>
 					<ul class="logos">
 						<li style="grid-row: span 2; margin-right: 50px;"><img src="images/cogent-logo.svg" alt=""></li>
-						<li><img src="images/mozilla-tech-speakers.png" alt=""></li>
-						<li><img src="images/gde-logo.png"></li>
+						<li style="align-self: end"><img src="images/mozilla-tech-speakers.png" alt=""></li>
+						<li style="align-self: start"><img src="images/gde-logo.png"></li>
 					</ul>
 					<img class="zoidberg" src="images/zoidberg-knitting.gif" alt="">
 				</section>
