--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 						<em>layouts</em><br>
 						of<br>
 						<em>tomorrow!</em></h1>
-					<div style="font-size:.8em">Responsive design with modern CSS</div>
+					<div style="font-size:.8em; font-family: Jura">Responsive design with modern CSS</div>
 				</section>
 
 				<section class="intro">
@@ -1235,11 +1235,11 @@ nav ul {
 					<a href="futurama-grid.html" target="_blank">image grid</a>
 				</section>
 
-				<section class="centre" data-background-image="images/bender-homer.png" data-background-size="contain">
+				<!-- <section class="centre" data-background-image="images/bender-homer.png" data-background-size="contain">
 					<div style="background: hsla(200, 5%, 95%, .6); color: inherit; padding: 1em">flexbox + grid</div>
-				</section>
+				</section> -->
 
-				<section class="outline">
+				<!-- <section class="outline">
 					<style>
 						.flippy-nav {
 							display: flex;
@@ -1338,9 +1338,9 @@ nav ul {
 							</div>
 						</article>
 					</div>
-				</section>
+				</section> -->
 
-				<section>
+				<!-- <section>
 					<pre><code class="css" data-noescape="">body {
 	<span class="fragment highlight" data-fragment-index="1">display: flex;</span>
 	<span class="fragment highlight" data-fragment-index="2">flex-wrap: wrap;</span>
@@ -1360,7 +1360,7 @@ article {
 	flex-basis: 45em;
 }
 					</code></pre>
-				</section>
+				</section> -->
 
 				<section class="centre" data-background-image="images/bender-homer.png" data-background-size="contain">
 					<a href="magic.html" target="_blank" style="background: hsla(200, 5%, 95%, .6); color: inherit; padding: 1em">columns + flexbox + grid</a>
@@ -1524,7 +1524,7 @@ article {
 			</div>
 		</div>
 
-		<div style="position: fixed; bottom: 40px; right: 40px; font-family: Futurama; font-size: 36px; opacity: .6; z-index: 1">
+		<div style="position: fixed; bottom: 30px; right: 30px; font-family: Futurama; font-size: 36px; opacity: .6; z-index: 1">
 			@ErinJZimmer
 		</div>
 
