unsuitable for snapshots

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ exports[`DayOfTheWeekWidget renders ?? when passed an empty string 1`] = `
 				</section>
 
 				<section>
-					when snapshot tests are't going to work
+					when snapshot tests aren't going to work
 				</section>
 
 
